--- a/index.html
+++ b/index.html
@@ -50,6 +50,48 @@
         <p>Lemon drops tiramisu sesame snaps oat cake marshmallow sugar plum liquorice. Tootsie roll pastry cake gummi bears pastry toffee tootsie roll candy. Pastry sesame snaps wafer liquorice. Gummies macaroon tiramisu jelly beans soufflé brownie ...</p>
       </section>
     </div>
+ <!-- more articles part 2-->
+ <div class="more-articles-part-2">
+  <section>
+    <h4>Who Cares? Do You?</h4>
+    <img id="code-img" src="./assets/point-code.jpg" alt="placeholder">
+    <p>Lemon drops tiramisu sesame snaps oat cake marshmallow sugar plum liquorice. Tootsie roll pastry cake gummi bears pastry toffee tootsie roll candy. Pastry sesame snaps wafer liquorice. Gummies macaroon tiramisu jelly beans soufflé brownie ...</p>
+  </section>
+  <section>
+    <h4>Is there such a thing as too much?</h4>
+    <img id="latte-img" src="./assets/Latte-pixels.jpg" alt="placeholder">
+    <p>Lemon drops tiramisu sesame snaps oat cake marshmallow sugar plum liquorice. Tootsie roll pastry cake gummi bears pastry toffee tootsie roll candy. Pastry sesame snaps wafer liquorice. Gummies macaroon tiramisu jelly beans soufflé brownie ...</p>
+  </section>
+  <div id="fith-article">
+  <section>
+    <h4>Coding & Coffee Go Hand and Hand</h4>
+    <img id="coffee-code" src="./assets/coffee-code.jpg" alt="placeholder">
+    <p>Lemon drops tiramisu sesame snaps oat cake marshmallow sugar plum liquorice. Tootsie roll pastry cake gummi bears pastry toffee tootsie roll candy. Pastry sesame snaps wafer liquorice. Gummies macaroon tiramisu jelly beans soufflé brownie ...</p>
+  </section>
   </div>
+  </div>
+
+  <section>
+  <footer>
+    <div id="mission">
+      <Span>Lemon drops tiramisu sesame snaps oat cake marshmallow sugar plum liquorice. Tootsie roll pastry cake gummi bears pastry toffee tootsie roll candy. Pastry sesame snaps wafer liquorice. Gummies macaroon tiramisu jelly beans soufflé brownie ...</Span>
+    </div>
+    <div>
+      <h2>New Pork Times</h2>
+    </div>
+    <div>
+      <p>© 2024 The New Pork times Indusrty</p> 
+    </div>
+      <div>
+      <ul>
+        <li><a  class="footer" href="#">FAQs</a></li>
+        <li><a  class="footer" href="#">Contact</a></li>
+        <li><a  class="footer" href="#">Careers</a></li>
+        <li><a  class="footer" href="#">DownLoad App</a></li>
+      </ul>
+    </div>
+  </footer>
+</section>
+</div>
 </body>
 </html>
